--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debootstrap (2:1.0.114+parrot4) rolling; urgency=medium
+
+  * Include devuan ceres and chimaera scripts.
+
+ -- Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>  Thu, 11 Feb 2021 18:54:05 +0100
+
 debootstrap (2:1.0.114+parrot3) rolling; urgency=medium
 
   * always include ca-certificates.
