--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debootstrap (1.0.125+parrot1) lts-updates; urgency=medium
+
+  * Add Parrot OS to scripts dir.
+  * Add Parrot-specific aliases.
+
+ -- Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>  Thu, 02 Sep 2021 16:17:01 +0200
+
 debootstrap (1.0.124) experimental; urgency=medium
 
   [ Colin Watson ]
